--- a/style/custom2.wxss
+++ b/style/custom2.wxss
@@ -832,6 +832,9 @@ mw-200{
 .c-word-12{
   color: rgb(0, 89, 116);
 }
+.b-group{
+  background-color: rgb(114, 114, 114);
+}
 .b-card{
   background-color: rgba(255, 255, 255, 0.2);
 }
